--- a/css/slider.css
+++ b/css/slider.css
@@ -4,56 +4,49 @@
  * Licensed under the Apache License, Version 2.0
  * http://www.apache.org/licenses/LICENSE-2.0
 ------------------------------------------------------------------------------*/
-* {
+*,
+:before,
+:after {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border: 0 none;
-    font-size: inherit;
-    font-family: inherit;
-    line-height: inherit;
+    color: inherit;
+    font: inherit;
     text-align: inherit;
     vertical-align: baseline;
-    color: inherit;
+    border: 0;
     outline: 0;
-}
-
-img,
-svg,
-audio,
-video,
-canvas,
-iframe,
-embed,
-object {
-    display: block;
-    height: auto;
-    max-width: 100%;
-    width: 100%;
-    vertical-align: middle;
-}
-
-summary {
-    display: list-item;
+    margin: 0;
+    padding: 0;
 }
 
 html {
+    background: #fff;
+    color: #333;
+    text-align: left;
+    overflow-wrap: break-word;
+    scroll-behavior: smooth;
+    font-family: HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue,
+        Helvetica, Arial, Nimbus Sans L, sans-serif;
     font-size: 100%;
-}
-
-body {
-    overflow: auto;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Nimbus Sans L", "Liberation Sans", FreeSans, sans-serif;
     font-weight: 400;
     line-height: 1.5;
-    text-align: left;
-    color: #555;
-    background-color: #fff;
 }
 
 body,
 html {
     height: 100%;
+}
+
+img,
+svg,
+picture,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+    max-width: 100%;
+    display: block;
 }
 
 .slider {
@@ -90,7 +83,8 @@ html {
     width: 100%;
     text-align: center;
     color: #fff;
-    text-shadow: 0em 0.125em 0.3125em rgba(0, 0, 0, 0.6), 0em 0em 0.3125em rgba(0, 0, 0, 0.5);
+    text-shadow: 0em 0.125em 0.3125em rgba(0, 0, 0, 0.6),
+        0em 0em 0.3125em rgba(0, 0, 0, 0.5);
 }
 
 .slide-title {
@@ -162,7 +156,6 @@ html {
 }
 
 @media screen and (max-width: 680px) {
-
     .prev-slide,
     .next-slide {
         display: none;
