--- a/css/slider.css
+++ b/css/slider.css
@@ -54,7 +54,7 @@ object {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: #555;
+    background-color: #333;
 }
 
 .slide {
@@ -64,6 +64,7 @@ object {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    visibility: hidden;
 }
 
 .slide img {
@@ -90,16 +91,16 @@ object {
 }
 
 .slider-nav {
-    position: absolute;
-    top: 50%;
-    right: 0;
+    position: relative;
     width: 100%;
+    height: 100%;
     z-index: 10;
 }
 
 .prev-slide,
 .next-slide {
     position: absolute;
+    top: 50%;
     display: inline-block;
     width: 3.125rem;
     height: 3.125rem;
@@ -126,13 +127,13 @@ object {
 
 .prev-slide:hover,
 .next-slide:hover {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .prev-slide::before,
 .next-slide::before {
     position: absolute;
-    top: 33%;
+    top: 40%;
     display: inline-block;
     width: 0.8125rem;
     height: 0.8125rem;
@@ -144,18 +145,27 @@ object {
 
 .prev-slide::before {
     transform: rotate(-45deg);
-    right: 25%;
+    right: 30%;
 }
 
 .next-slide::before {
     transform: rotate(135deg);
-    left: 25%;
+    left: 30%;
 }
 
 @media screen and (max-width: 680px) {
     .prev-slide,
     .next-slide {
-        display: none;
+        top: 0;
+        height: 100%;
+        opacity: 0;
+    }
+    .prev-slide {
+        left: 0;
+    }
+
+    .next-slide {
+        right: 0;
     }
 }
 
