By using the object-fit property, the image's original aspect ratio will be preserved while making it fit inside the slide container.
This also removes the need to use the overflow property, which can be a source of layout issues when not used properly.

--- a/css/slider.css
+++ b/css/slider.css
@@ -74,6 +74,8 @@ object {
     width: 100%;
     height: 100%;
     cursor: default;
+    object-fit: cover;
+    object-position: center;
 }
 
 .slide-content {
@@ -166,17 +168,5 @@ object {
 
     .next-slide {
         right: 0;
-    }
-}
-
-@media screen and (max-width: 980px) {
-    .slider {
-        max-height: 57.95918367vw;
-    }
-}
-
-@media screen and (min-height: 980px) {
-    .slider {
-        max-height: 57.95918367vw;
     }
 }
