--- a/css/slider.css
+++ b/css/slider.css
@@ -31,11 +31,6 @@ html {
     line-height: 1.5;
 }
 
-body,
-html {
-    height: 100%;
-}
-
 img,
 svg,
 picture,
@@ -52,7 +47,7 @@ object {
 .slider {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     background-color: #333;
 }
@@ -62,20 +57,18 @@ object {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     visibility: hidden;
 }
 
 .slide img {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     cursor: default;
     object-fit: cover;
     object-position: center;
+    backface-visibility: hidden;
 }
 
 .slide-content {
@@ -95,28 +88,28 @@ object {
 .slider-nav {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 10;
 }
 
 .prev-slide,
 .next-slide {
     position: absolute;
-    top: 50%;
+    top: 80%;
     display: inline-block;
     width: 3.125rem;
     height: 3.125rem;
     line-height: 3.125;
     margin: 0;
-    border: 0.125rem solid white;
+    border: 0.125rem solid #fff;
     backface-visibility: hidden;
     background-color: rgba(0, 0, 0, 0.3);
-    color: white;
+    color: #fff;
     overflow: hidden;
     cursor: pointer;
-    z-index: 20;
     transition: all 0.3s ease-in-out 0s;
     user-select: none;
+    border-radius: 100%;
 }
 
 .prev-slide {
@@ -135,7 +128,7 @@ object {
 .prev-slide::before,
 .next-slide::before {
     position: absolute;
-    top: 40%;
+    top: 35%;
     display: inline-block;
     width: 0.8125rem;
     height: 0.8125rem;
@@ -147,20 +140,26 @@ object {
 
 .prev-slide::before {
     transform: rotate(-45deg);
-    right: 30%;
+    right: 32%;
 }
 
 .next-slide::before {
     transform: rotate(135deg);
-    left: 30%;
+    left: 32%;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 42.5em) {
     .prev-slide,
     .next-slide {
         top: 0;
-        height: 100%;
-        opacity: 0;
+        height: 100vh;
+        background-color: transparent;
+        border: 0 none;
+        border-radius: 0;
+    }
+    .prev-slide::before,
+    .next-slide::before {
+        top: 50%;
     }
     .prev-slide {
         left: 0;
