--- a/css/slider.css
+++ b/css/slider.css
@@ -48,7 +48,6 @@ object {
     position: relative;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
     background-color: #333;
 }
 
@@ -100,14 +99,12 @@ object {
     width: 3.125rem;
     height: 3.125rem;
     line-height: 3.125;
-    margin: 0;
     border: 0.125rem solid #fff;
     backface-visibility: hidden;
     background-color: rgba(0, 0, 0, 0.3);
     color: #fff;
-    overflow: hidden;
     cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease;
     user-select: none;
     border-radius: 100%;
 }
@@ -151,21 +148,6 @@ object {
 @media screen and (max-width: 42.5em) {
     .prev-slide,
     .next-slide {
-        top: 0;
-        height: 100vh;
-        background-color: transparent;
         border: 0 none;
-        border-radius: 0;
-    }
-    .prev-slide::before,
-    .next-slide::before {
-        top: 50%;
-    }
-    .prev-slide {
-        left: 0;
-    }
-
-    .next-slide {
-        right: 0;
     }
 }
