--- a/css/slider.css
+++ b/css/slider.css
@@ -52,6 +52,7 @@ object {
 }
 
 .slide {
+    z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
@@ -59,6 +60,14 @@ object {
     height: 100vh;
     overflow: hidden;
     visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s ease-in-out 0s;
+}
+
+.slide-current {
+    z-index: 5;
+    visibility: visible;
+    opacity: 1;
 }
 
 .slide img {
